Fixed form-text alignment.

--- a/src/styl/form/form.styl
+++ b/src/styl/form/form.styl
@@ -19,6 +19,10 @@
 
 .form-text
     margin: $form-spacing;
+    padding-inline-start: $form-label-width + 2 * $form-spacing;
+
+    &.fill
+        padding-inline-start: 0;
 
 .form-group
     margin: $form-spacing;
@@ -59,8 +63,10 @@
 
 form-size($max-width)
     @media screen and (max-width: ($max-width - 1))
-        .form-group
+        .form-text
+            padding-inline-start: 0;
 
+        .form-group
             &:not(.form-group-inline)
                 .form-label
                     margin: $form-spacing 0;
